tests/snapshots/run_wpt_conformance__litert_conv2d_float32_4D_input_and_filter_tensors_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "conv2d.https.any.js",
    "conv2d float32 4D input and filter tensors all options",
    "litert",
    "PASS",
)
