tests/snapshots/run_wpt_conformance__litert_convTranspose2d_float16_4D_both_input_and_filter_non-constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 64
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d float16 4D both input and filter non-constant tensors default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ConvTranspose2d { input: 1, filter: 0, options: Some(MLConvTranspose2dOptions { label: "", padding: [], strides: [], dilations: [], output_padding: [], output_sizes: None, groups: 1, input_layout: "", filter_layout: "", bias: None }), outputs: [2] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dFilter: f16[1, 1, 2, 2];
    convTranspose2dInput: f16[1, 1, 2, 2];
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(convTranspose2dInput, convTranspose2dFilter, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", outputPadding=[], outputSizes=null, padding=[], strides=[]);
  }

  outputs { convTranspose2dOutput; }
}
